added progress bar

--- a/VideoTestIntegrity.desktop
+++ b/VideoTestIntegrity.desktop
@@ -1,5 +1,5 @@
 #contact: piotr4@gmail.com
-#version 1.0
+#version 1.1
 #GPLv3
 
 [Desktop Entry]
@@ -14,4 +14,4 @@ X-KDE-StartupNotify=false
 [Desktop Action ffmpegVideoTest]
 Name=Test Video Integrity
 Icon=folder-videos-symbolic
-Exec=type ffmpeg; if [ $? -eq 0 ]; then konsole --hold -e bash -c 'ffmpeg -threads 1 -v error -i "%u" -f null /dev/null; kdialog --title "Integrity test" --passivepopup "Video test complete. ('%u')";  kdialog --title "Operation" --msgbox "Video test complete. Check the console for detais.";'; else kdialog --title "Package missing" --error "Please install ffmpeg from package manager."; fi;
+Exec=type ffmpeg; if [ $? -eq 0 ]; then konsole --hold -e bash -c 'dbusRef=$(kdialog --title="Video Integrity" --progressbar "            Testing...    Please wait...            " 0); ffmpeg -threads 1 -v error -i "%u" -f null /dev/null; qdbus $dbusRef close; kdialog --title "Integrity test" --passivepopup "Video test complete. ('%u')";  kdialog --title "Operation" --msgbox "Video test complete. Check the console for detais.";'; else kdialog --title "Package missing" --error "Please install ffmpeg from package manager."; fi;
